alignment fixed for most sizes

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     padding: 0;
     margin: 0;
     display: flex;
-    width: 100vw;
+    /* width: 100vw; */
     height: 100vh;
 }
 
@@ -26,60 +26,73 @@ body{
 
 .sidebar{
     background-image: url("https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?q=80&w=1862&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-    flex: 1 1 auto;
-    background-size: cover;
+    flex: 4 4 auto;
+    background-size:cover;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    min-height: 100vh;
 }
 .content{
-    flex: 1 1 auto;
+    flex: 6 6 auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height: 100vh;
 }
 
 .sign-up{
-    padding:50px;
+    padding: 2vh 5vw;
+    
 }
 
 .sign-up-form{
     display: flex;
     flex-wrap: wrap;
+    gap: 5%;
 }
 
 .elem{
-    width: 50%;
+    min-width: 45%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    
+    flex: 1 1 auto;
 }
 
 .header{
-    padding:50px;
-    background-color: grey;
+    
+    background-color: lightgrey;
+    min-height: 30vh;
+    padding: 2vh 5vw;
+    flex: 1 1 auto;
 }
 
 .footer{
-    padding: 50px;
-    background-color: grey;
+    
+    background-color: lightgrey;
+    height: 30vh;
+    padding:  2vh 5vw;
+    flex: 1 1 auto;
 }
 
 .odinbanner{
     color:white;
-    background-color: rgba(0,0,0);
+    background-color: rgba(0,0,0, 0.6);
     display: flex;  
-    font-size: 5em;
+    font-size: 60px;
     align-items: center;
     justify-content: center;
-    
+    width: 100%;
+    height: 15vh;
+    margin: 15vh 0 0 0; 
+    padding: 0 5vw   
 }
 
 .odinbanner img{
-    flex: 1 1 auto;
-    width: 1em;
-    height: 1em;
+     flex: 1 1 auto; 
+     width: 0.7em;
+    height: 1em; 
     display: inline;
 }
 
@@ -103,4 +116,14 @@ input[type="text"]:focus{
 
 input:invalid{
     border: 1px solid red;
+}
+
+a{
+    text-decoration: none;
+    color: #596D48;
+    font-weight: bold;
+}
+
+button{
+    background-color: #596D48;
 }
